# phospropel

./: MANIFEST.in  README.md  pyproject.toml
examples/: 01_pervanadate_library.py  02_phosphatase_profiling.py  03_phospholyase_profiling.py  04_pssm_scoring.py
examples/data/lambda_ptmrs_0min/: E20241220-04_ptmrs_PeptideGroups.csv
examples/data/lambda_ptmrs_5min/: E20241210-10_ptmrs_PeptideGroups.csv  E20241220-06_ptmrs_PeptideGroups.csv  E20241220-08_ptmrs_PeptideGroups.csv
examples/data/perlib_ptmrs/: E20231207-03_ptmRS_PeptideGroups.csv  E20240823-08_ptmRS_PeptideGroups.csv  E20240907-04_ptmRS_PeptideGroups.csv  E20241205-04_ptmRS_PeptideGroups.csv
examples/data/spvc_perlib_ptmrs/: E20250423-18_ptmrs_PeptideGroups.csv  E20250423-20_ptmrs_PeptideGroups.csv  E20250423-22_ptmrs_PeptideGroups.csv
phospropel/: __init__.py  utils.py
phospropel/pssms/: kin_pssm.csv  kinase_mapping.csv  tk_pssm.csv
