[project]
name = "phospropel"
version = "0.1.0"
description = "Tools for workign with phosphoproteome derived peptide library data"
authors = [{ name = "Weeks Lab @ UW-Madison" }]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "statsmodels"
]

[tool.setuptools]
packages = ["phospropel"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
